--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,18 @@
-db.driver = com.mysql.jdbc.Driver
-db.url = jdbc:mysql://localhost:3306/chat_application?createDatabaseIfNotExist=true&useSSL=false
-db.username=root
-db.password=admin
-hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-hibernate.hbm2ddl.auto=update
-hibernate.show_sql = true
-hibernate.format_sql = true
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/chat_application?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username = root
+spring.datasource.password = admin
+
+#JPA Properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+###Logging Levels
+#Disable the default loggers
+logging.level.org=WARN
+logging.level.blog=WARN
+#Show SQL executed with parameter bindings
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor=TRACE
