added facebook login , image avatar and email for uniqueness

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,9 @@ logging.level.blog=WARN
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor=TRACE
+
+
+#facebook
+spring.social.auto_connection_views=true
+spring.social.facebook.appId=1765339770462003
+spring.social.facebook.appSecret=52077796e8edd4cd23008d77795dfa10
